# ANACD3

./: .gitignore  Makefile  QUICKSTART.md  README.md  anacsync.yaml.example  example_usage.py  instruction.md  page_sample.html  pyproject.toml  setup.py  state_layout.md
anacsync/: __init__.py  cli.py  config.py  crawler.py  http_client.py  inventory.py  planner.py  sorter.py  utils.py
anacsync/downloader/: __init__.py  manager.py  strategies.py
tests/: __init__.py  test_config.py  test_downloader.py  test_utils.py
